--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-proxy": "^1.18.1",
     "m3u8-parser": "^6.0.0",
     "node-fetch": "^2.6.1",
-    "node-json-db": "^2.1.4"
+    "node-json-db": "^2.1.4",
+    "express-basic-auth": "^1.2.1"
   }
 }
